--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 	<div id="wrapper">
 		<h1>jouni.me</h1>
-		<p class="about">Front-end designer <span class="amp">&amp;</span> developer, working as a design director at <a href="https://vaadin.com">Vaadin</a>.</p>
+		<p class="about">Front-end designer <span class="amp">&amp;</span> developer, working as a product designer at <a href="https://vaadin.com">Vaadin</a>.</p>
 		<ul class="networks">
 			<li class="twitter"><a href="http://twitter.com/jouni" rel="me">twitter</a></li>
 			<li class="github"><a href="http://github.com/jouni" rel="me">GitHub</a></li>
