--- a/test.html
+++ b/test.html
@@ -29,6 +29,7 @@
       top: 2em;
       left: 47%;
       block-progression: lr;
+      -webkit-writing-mode: vertical-lr;
       writing-mode: vertical-lr;
       color: #ccc;
       font-size: 1.2em;
