--- a/test.html
+++ b/test.html
@@ -30,6 +30,8 @@
       left: 47%;
       block-progression: lr;
       -webkit-writing-mode: vertical-lr;
+      -moz-writing-mode: vertical-lr;
+      -ms-writing-mode: bt-rl;
       writing-mode: vertical-lr;
       color: #ccc;
       font-size: 1.2em;
@@ -76,7 +78,7 @@
   <p>You should <b>consider upgrading</b> to a more up-to-date browser. The most popular browsers are:</p>
   <ul>
     <li><a href="https://www.google.com/chrome">Chrome</a></li>
-    <li><a href="http://www.mozilla.com/firefox">Firefox</a> <small>48 (or 45 ESR)</small></li>
+    <li><a href="http://www.mozilla.com/firefox">Firefox</a> <small>48 (or 45 ESR) or newer</small></li>
     <li><a href="https://www.microsoft.com/en-us/windows/microsoft-edge">Edge</a></li>
     <li><a href="https://support.microsoft.com/en-us/help/17621/internet-explorer-downloads">Internet Explorer 11</a></li>
     <li><a href="https://www.opera.com/browser">Opera</a></li>
