--- a/upload/laskupohja2.html
+++ b/upload/laskupohja2.html
@@ -285,10 +285,10 @@ LY 1773757-8</textarea>
 </header>
 
 <section class="top">
-<textarea>Topi-Keittiöt Oy
-PL 46
-85101 Kalajoki
-Y-tunnus 2698933-9</textarea>
+<textarea>ASENNUS SUOMI OY
+Teollisuuskatu 1
+25460 Kisko
+Y-tunnus 2808029-2</textarea>
 
 <div class="maksuehdot">
 <label>Maksuehdot Betalningsvillkor</label>
@@ -336,8 +336,8 @@ Asennus Tamminen
 
 <div class="maksaja">
 <label>Maksaja Betalare</label>
-<textarea>Topi-Keittiöt Oy
-Y-tunnus: 2698933-9</textarea>
+<textarea>Asennus Suomi oy
+Y-tunnus: 2808029-2</textarea>
 </div>
 
 <div class="viite">
